--- a/Prace_domowe/prdom02.html
+++ b/Prace_domowe/prdom02.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-.loader {
-  border: 16px solid gray;
-  border-radius: 50%;
-  border-top: 16px solid red;
-  border-bottom: 16px solid blue;
-  width: 120px;
-  height: 120px;
-
-  animation: spin 1500ms ease-in-out infinite;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-  
-}
-</style>
-</head>
-<body>
-
-<div class="loader"></div>
-
-</body>
+   <head>
+      <title>Loader</title>
+      <style>
+         .loader {
+         border: 16px solid gray;
+         border-radius: 50%;
+         border-top: 16px solid red;
+         border-bottom: 16px solid blue;
+         width: 120px;
+         height: 120px;
+         animation: spin 1500ms ease-in-out infinite;
+         }
+         @keyframes spin {
+         0% { transform: rotate(0deg); }
+         100% { transform: rotate(360deg); }
+         }
+      </style>
+   </head>
+   <body>
+      <div class="loader"></div>
+   </body>
 </html>
